# portal-gems

./: .gitignore  CHANGELOG.md  CLAUDE.md  PLAN.md  README.md
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  VPS-SETUP.md  phase0-android-notes.md  phase0-desktop-notes.md  phase1-mobile-notes.md  phase2-3-notes.md
native/magic-wormhole/: Cargo.toml  PORTALGEMS-PATCH.md
native/magic-wormhole/src/: transfer.rs
native/magic-wormhole/src/transfer/: v1.rs
native/wormhole-core/: Cargo.toml
native/wormhole-core/examples/: recv.rs  send.rs
native/wormhole-core/src/: ffi.rs  lib.rs
native/wormhole-node/: Cargo.toml
native/wormhole-node/src/: lib.rs
scripts/: package-release.sh
