[package]
name = "wormhole-core"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "PortalGems wormhole engine: app-shaped wrapper around magic-wormhole.rs"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
# Vendored copy of magic-wormhole 0.8.1 (EUPL-1.2) with a small local patch:
# protocol-v1 "directory" offers (zipped folder send + offer-kind surfaced on
# receive) that the released crate does not expose. See
# native/magic-wormhole/PORTALGEMS-PATCH.md for the exact diff rationale.
magic-wormhole = { path = "../magic-wormhole" }
# Give the engine `wss://` support (without this only cleartext `ws://` works,
# and TLS rendezvous servers fail with "rendezvous server connection").
# magic-wormhole talks to the rendezvous over async-tungstenite's smol runtime,
# but its own `tls` feature maps to async-tungstenite's `async-tls`, which has
# no smol integration in 0.34 and fails to compile; its `native-tls` feature
# would drag in OpenSSL (painful to cross-compile to Android). Enabling rustls
# with bundled webpki roots on the SAME async-tungstenite (Cargo unions
# features) is pure Rust, cross-compiles cleanly to every Android ABI, keeps the
# F-Droid "no proprietary deps" rule, and trusts Let's Encrypt out of the box.
async-tungstenite = { version = "0.34", features = ["futures-rustls-webpki-roots"] }
# rustls 0.23 requires exactly one crypto provider; futures-rustls ships none, so
# pick `ring` (cross-compiles to Android cleanly; aws-lc-rs needs more C tooling)
# and install it as the process default at startup (see `ensure_crypto_provider`).
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
async-fs = "2"
futures-lite = "2"
thiserror = "2"
uniffi = "0.31"
zip = { version = "2", default-features = false, features = ["deflate"] }
blocking = "1"

[dev-dependencies]
async-io = "2"
anyhow = "1"
uniffi = { version = "0.31", features = ["cli"] }
